Fix HTML structure and update file paths

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Flores - Desarrollador .NET y Analista de Datos SQL</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -38,7 +38,7 @@
         </div>
 
         <div class="hero-image-container">
-            <img src="images/daniel-flores.png" alt="Daniel Flores" class="hero-image">
+            <img src="./IMAGES/daniel-flores.png" alt="Daniel Flores" class="hero-image">
         </div>
 
         <div class="social-sidebar">
@@ -78,7 +78,8 @@
         </div>
     </section>
 
-    <script src="js/script.js"></script>
+    <script src=".JS//script.js"></script>
 </body>
+
 
 </html>
