Fix HTML structure and update script source path

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
         </div>
     </section>
 
-    <script src=".JS//script.js"></script>
+    <script src="./JS/script.js"></script>
 </body>
 
 
 </html>
+
