Mobile social icons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="availability">
                 <span class="status-text">Estoy disponible</span>
                 <span class="status-icon"></span>
-            </div>
+            </div>hay que agregar un
             <h1 class="hero-title">Soy Daniel Flores</h1>
         </div>
 
