Fix HTML formatting and add missing content

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="availability">
                 <span class="status-text">Estoy disponible</span>
                 <span class="status-icon"></span>
-            </div>hay que agregar un
+            </div>
             <h1 class="hero-title">Soy Daniel Flores</h1>
         </div>
 
@@ -88,5 +88,6 @@
 
     <script src="./JS/script.js"></script>
 </body>
+
 
 </html>
